// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен корректно отрендериться c onlyContent === false 1`] = `
<div
  className="listing-item listing-item_view_promo catalog__item catalog__item_view_generation"
>
  <Carousel
    alias="cattouch"
    changeItemTimeout={0}
    counterPosition="top-right"
    hasPanorama={false}
    isSPA={false}
    items={
      Array [
        Object {
          "cattouch": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/cattouch",
          },
          "cattouchr": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/cattouchret",
          },
          "main": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/auto_main",
          },
        },
      ]
    }
    showCounter={true}
    showDefaulImage={false}
    showDots={false}
  />
  <div
    className="listing-item__details catalog__item-details"
  >
    Audi A8 IV (D5) – седан, полный привод. Автомат. Бензиновые и дизельные двигатели мощностью от 286 до 460 лошадиных сил.
  </div>
  <div
    className="listing-item__summary catalog__item-summary-wrap"
  >
    <PriceItem
      link="link/listing/?category=cars&configuration_id=21040152&mark=audi&model=a8&section=new&super_gen=21040120&body_type_group=SEDAN"
      metrika="listing,new_minmax_price"
      onlyContent={false}
      price="6 050 000 – 7 610 000"
      title="Новые"
    />
    <PriceItem
      link="link/listing/?category=cars&configuration_id=21040152&mark=audi&model=a8&section=used&super_gen=21040120"
      metrika="listing,used_minmax_price"
      onlyContent={false}
      price="6 150 000 – 8 275 014"
      title="С пробегом"
    />
  </div>
</div>
`;

exports[`должен корректно отрендериться c onlyContent === true 1`] = `
<div
  className="listing-item listing-item_view_promo catalog__item catalog__item_view_generation"
>
  <Carousel
    alias="cattouch"
    changeItemTimeout={0}
    counterPosition="top-right"
    hasPanorama={false}
    isSPA={false}
    items={
      Array [
        Object {
          "cattouch": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/cattouch",
          },
          "cattouchr": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/cattouchret",
          },
          "main": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/auto_main",
          },
        },
      ]
    }
    showCounter={true}
    showDefaulImage={false}
    showDots={false}
  />
  <div
    className="listing-item__details catalog__item-details"
  >
    Audi A8 IV (D5) – седан, полный привод. Автомат. Бензиновые и дизельные двигатели мощностью от 286 до 460 лошадиных сил.
  </div>
  <div
    className="listing-item__summary catalog__item-summary-wrap"
  >
    <PriceItem
      link="link/listing/?category=cars&configuration_id=21040152&mark=audi&model=a8&section=new&super_gen=21040120&body_type_group=SEDAN"
      metrika="listing,new_minmax_price"
      onlyContent={true}
      price="6 050 000 – 7 610 000"
      title="Новые"
    />
    <PriceItem
      link="link/listing/?category=cars&configuration_id=21040152&mark=audi&model=a8&section=used&super_gen=21040120"
      metrika="listing,used_minmax_price"
      onlyContent={true}
      price="6 150 000 – 8 275 014"
      title="С пробегом"
    />
  </div>
</div>
`;

exports[`должен корректно отрендериться со ссылкой на новые 1`] = `
<div
  className="listing-item listing-item_view_promo catalog__item catalog__item_view_generation"
>
  <Carousel
    alias="cattouch"
    changeItemTimeout={0}
    counterPosition="top-right"
    hasPanorama={false}
    isSPA={false}
    items={
      Array [
        Object {
          "cattouch": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/cattouch",
          },
          "cattouchr": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/cattouchret",
          },
          "main": Object {
            "url": "//avatars.mds.yandex.net/get-verba/216201/2a000001609035b09a3f13aee990c99a9ca5/auto_main",
          },
        },
      ]
    }
    showCounter={true}
    showDefaulImage={false}
    showDots={false}
  />
  <div
    className="ConfigurationDetails__new_offers"
  >
    <Button
      className="ConfigurationDetails__new_offers_button"
      color="green"
      metrika="listing,new_green_button"
      size="xl"
      type="link"
      url="link/listing/?category=cars&mark=audi&model=a8&section=new&body_type_group=SEDAN"
      width="full"
    >
      Купить новый
    </Button>
    <div
      className="ConfigurationDetails__new_offers_count"
    >
      10 предложений
    </div>
    <div
      className="ConfigurationDetails__new_offers_price"
    >
      от 6 050 000 до 7 610 000 ₽
    </div>
  </div>
  <div
    className="listing-item__details catalog__item-details"
  >
    Audi A8 IV (D5) – седан, полный привод. Автомат. Бензиновые и дизельные двигатели мощностью от 286 до 460 лошадиных сил.
  </div>
  <div
    className="listing-item__summary catalog__item-summary-wrap"
  >
    <PriceItem
      link="link/listing/?category=cars&configuration_id=21040152&mark=audi&model=a8&section=new&super_gen=21040120&body_type_group=SEDAN"
      metrika="listing,new_minmax_price"
      onlyContent={false}
      price="6 050 000 – 7 610 000"
      title="Новые"
    />
    <PriceItem
      link="link/listing/?category=cars&configuration_id=21040152&mark=audi&model=a8&section=used&super_gen=21040120"
      metrika="listing,used_minmax_price"
      onlyContent={false}
      price="6 150 000 – 8 275 014"
      title="С пробегом"
    />
  </div>
</div>
`;
